# tz_portal_group_2

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
_docker/: Dockerfile
src/: __main__.py  app.py  schemas.py  service.py  settings.py
src/routers/: __init__.py
src/routers/api/: __init__.py
src/routers/api/v1/: __init__.py  rates.py
src/utils/: currate_api.py
